--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -23,6 +23,7 @@
     "react-native-screens": "^2.8.0",
     "react-native-sound": "^0.11.0",
     "react-native-sound-player": "^0.10.4",
+    "react-native-translucent-modal": "^1.1.2",
     "react-native-tts": "^3.2.0"
   },
   "devDependencies": {
