--- a/RNProject/android/app/build.gradle
+++ b/RNProject/android/app/build.gradle
@@ -129,7 +129,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.rnproject"
+        applicationId "com.everywarelab.screenreaderapirn"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
